deploy/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping
  labels:
    app: ping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping
  template:
    metadata:
      labels:
        app: ping
    spec:
      restartPolicy: Always
      containers:
      - name: ping
        image: ghcr.io/mchmarny/grpc-ping:v0.0.2
        ports:
        - containerPort: 50505
