deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping
spec:
  selector:
    app: ping
  ports:
    - port: 50505
      protocol: TCP
      targetPort: 50505
  sessionAffinity: None
  type: NodePort
